--- a/app/index/view/index/index.phtml
+++ b/app/index/view/index/index.phtml
@@ -4,6 +4,13 @@
 	<title>index</title>
 </head>
 <body>
-index, index, index
+<a href="{{test}}">{{test}}</a>
+index, index, index 
+
+<div>
+{% for i in 0..100 %}
+  <div>{{i}}</div>
+{% endfor %}
+</div>
 </body>
 </html>
