--- a/app/index/view/index.phtml
+++ b/app/index/view/index.phtml
@@ -2,11 +2,22 @@
 <head>
     <title>Example</title>
 </head>
+<script type="text/javascript" src="/javascript/jquery-3.2.1.js"></script>
 <body>
 
-<h1>这个是默认的布局文件!</h1>
+<div style="top: 0;width: 100%;height: 50px;text-align: center;border:1px solid red;align-content: center;padding: 1px 0px 0px 1px;">
+	<h2>这个是默认的布局文件!</h2>
+</div>
 
-<?php echo $this->getContent(); ?>
 
+
+	<?php echo $this->getContent(); ?>	
+
+
+
+
+<div style="position: fixed;bottom: 0;background: #BBB;width: 100%;height: 50px;text-align: center;">
+	国家准字药
+</div>
 </body>
 </html>
