--- a/app/index/view/index/index.phtml
+++ b/app/index/view/index/index.phtml
@@ -1,16 +1,34 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>index</title>
-</head>
-<body>
-<a href="{{test}}">{{test}}</a>
-index, index, index 
 
-<div>
-{% for i in 0..100 %}
-  <div>{{i}}</div>
-{% endfor %}
-</div>
-</body>
-</html>
+	<div style="width: 100%;text-align: right;">
+		
+	   <a href="{{login}}">登录</a>
+	   <a href="{{register}}">注册</a>
+	</div>
+
+	<div style="text-align: center;align-content: center;">
+		 	<form action= "{:url('index/Index/login')}" method="post">
+			账&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;号：<input type="text" name="userName" value="">		
+			<br />
+			密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码：<input type="password" name="userPassword" value="">	
+			<br />
+			<br />
+			<input id='login'  type="submit" value="登录"> <a href="{{forgetPassWorld}}">忘记密码？修改</a>
+			</form>
+	</div>
+
+	<div>
+		<ul>
+			{% for name,value in robs  if name != 2 %}
+				<li>
+            		name : {{ name|e }}
+            		value : {{ value['name']|e }}
+            		index : {{ loop.index0}}
+      		    </li>
+			{% endfor %}
+
+		</ul>
+	</div>
+		
+<script type="text/javascript">
+
+</script>
