--- a/app/admin/view/index.phtml
+++ b/app/admin/view/index.phtml
@@ -6,10 +6,11 @@
 <body>
 
 <div style="top: 0;width: 100%;height: 50px;text-align: center;border:1px solid red;align-content: center;padding: 1px 0px 0px 1px;">
-	<h2>这个是默认的布局文件!</h2>
+	<h2>这个是admin默认的布局文件!</h2>
 </div>
 
 	<?php echo $this->getContent(); ?>	
+
 
 <div style="position: fixed;bottom: 0;background: #BBB;width: 100%;height: 50px;text-align: center;">
 	国家准字药
