--- a/app/index/view/index/register.phtml
+++ b/app/index/view/index/register.phtml
@@ -9,6 +9,7 @@
 			<div>
 				<span></span>
 			</div>
+			手&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;机：<input type="text" name="phone" value="">		<br />
 			密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;保：<input type="text" name="question" value="">		<br />
 			答&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;案：<input type="text" name="answer" value="">			<br />
 			密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码：<input type="password" name="password" value="">		<br />	
