--- a/app/index/view/index.phtml
+++ b/app/index/view/index.phtml
@@ -6,7 +6,7 @@
 <body>
 
 <div style="top: 0;width: 100%;height: 50px;text-align: center;border:1px solid red;align-content: center;padding: 1px 0px 0px 1px;">
-	<h2>这个是默认的布局文件!</h2>
+	<h2>这个是index默认的布局文件!</h2>
 </div>
 
 	<?php echo $this->getContent(); ?>	
