--- a/app/index/view/index/index.phtml
+++ b/app/index/view/index/index.phtml
@@ -1,12 +1,10 @@
 
 	<div style="width: 100%;text-align: right;">
-		
-	   <a href="{{login}}">登录</a>
 	   <a href="{{register}}">注册</a>
 	</div>
 
 	<div style="text-align: center;align-content: center;">
-		 	<form action= "{:url('index/Index/login')}" method="post">
+		 	<form action= "{{login}}" method="post">
 			账&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;号：<input type="text" name="userName" value="">		
 			<br />
 			密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码：<input type="password" name="userPassword" value="">	
