--- a/app/index/view/index.phtml
+++ b/app/index/view/index.phtml
@@ -3,6 +3,7 @@
     <title>Example</title>
 </head>
 <script type="text/javascript" src="/javascript/jquery-3.2.1.js"></script>
+<link rel="stylesheet" type="text/css" href="/css/common.css">
 <body>
 
 <div style="top: 0;width: 100%;height: 50px;text-align: center;border:1px solid red;align-content: center;padding: 1px 0px 0px 1px;">
