--- a/app/index/view/main/index.phtml
+++ b/app/index/view/main/index.phtml
@@ -1,7 +1,7 @@
 
 
 <div>
-	<h1>main主页面index</h1>
+	<h1>main主页面index  用户id ：{{ user_id }}  </h1>
 </div>
 
 <div style="float: left;border: 1px solid red;height: 15%">
@@ -13,7 +13,7 @@
 </div>
 
 <div style="float: left;border: 1px solid red;width: 70%;text-align: center;align-content: center;height: 15%">
-		<form method="post" action="/index/Catalog/addCatalog">
+		<form method="post" action="/index/catalog/addCatalog">
 			<table align="center">
 				<tr>
 					<td><span>上级结构</span></td>
